Add admin web panel and dynamic bridge pair configuration

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ WHITELIST_USERS=[]
 BLACKLIST_USERS=[]
 EXCLUDED_COMMANDS=["/start","!admin"]
 IGNORE_BOTS=true
+
+# Admin web panel
+ADMIN_TOKEN=change_me
+ADMIN_HOST=0.0.0.0
+ADMIN_PORT=8080
+BRIDGE_PAIRS_STORE_PATH=data/bridge_pairs.json
