--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,15 @@ services:
       DEDUP_TTL_SECONDS: ${DEDUP_TTL_SECONDS:-300}
       DEDUP_REDIS_URL: ${DEDUP_REDIS_URL:-}
       HEARTBEAT_INTERVAL_SECONDS: ${HEARTBEAT_INTERVAL_SECONDS:-60}
+      BRIDGE_PAIRS_STORE_PATH: ${BRIDGE_PAIRS_STORE_PATH:-data/bridge_pairs.json}
+      ADMIN_TOKEN: ${ADMIN_TOKEN:-}
+      ADMIN_HOST: ${ADMIN_HOST:-0.0.0.0}
+      ADMIN_PORT: ${ADMIN_PORT:-8080}
+    ports:
+      - "${ADMIN_PORT:-8080}:${ADMIN_PORT:-8080}"
+    volumes:
+      - bridge-data:/app/data
     restart: unless-stopped
+
+volumes:
+  bridge-data:
