--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ discord.py>=2.4.0,<3.0.0
 aiogram>=3.13.0,<4.0.0
 python-dotenv>=1.0.1,<2.0.0
 redis>=5.0.0,<6.0.0
+fastapi>=0.115.0,<1.0.0
+uvicorn>=0.30.0,<1.0.0
