--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ TELEGRAM_CHAT_ID=-1001234567890
 
 # Preferred multi-pair format
 BRIDGE_PAIRS=[{"discord_channel_id":"123456789012345678","telegram_chat_id":"-1001234567890"}]
+# BRIDGE_PAIRS=[{"discord_channel_id":"123456789012345678","telegram_chat_id":"-1001234567890","telegram_thread_id":"42"}]
 
 # Forwarding filters
 WHITELIST_USERS=[]
