--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,7 @@ services:
     environment:
       DISCORD_BOT_TOKEN: ${DISCORD_BOT_TOKEN}
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
-      DISCORD_CHANNEL_ID: ${DISCORD_CHANNEL_ID}
-      TELEGRAM_CHAT_ID: ${TELEGRAM_CHAT_ID}
-      BRIDGE_PAIRS: ${BRIDGE_PAIRS:-}
+      BRIDGE_PAIRS: ${BRIDGE_PAIRS}
       WHITELIST_USERS: ${WHITELIST_USERS:-}
       BLACKLIST_USERS: ${BLACKLIST_USERS:-}
       EXCLUDED_COMMANDS: ${EXCLUDED_COMMANDS:-}
